# ep-dsid

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.MD  README.md  main.tex  pyproject.toml  requirements.txt
config/: peer-alice.yaml  peer-bob.yaml  peer-carol.yaml  tracker-1.yaml  tracker-2.yaml  tracker-3.yaml  trackers.json
scripts/: lab.local.ps1  run_all_trackers.sh  run_peer.sh  run_tracker.sh
src/common/: chunking.py  config.py  errors.py  hashing.py  logging_config.py  messages.py  protocol.py
src/peer/: chunk_manager.py  cli.py  console.py  downloader.py  main.py  name_registry.py  playlist_store.py  reassign_poller.py  seed_reporter.py  storage.py  tcp_client.py  tcp_server.py  tracker_client.py
src/tracker/: anti_entropy.py  api.py  failure_detector.py  handlers.py  index.py  main.py  persistence.py  rebalance.py  routing.py  sync_client.py  sync_server.py  tombstone.py
tests/integration/: cluster.py  test_anti_entropy.py  test_download_parallel.py  test_download_sequential.py  test_failure_detection.py  test_fallback.py  test_index_recovery.py  test_lww.py  test_playlists.py  test_reassign_poll.py  test_register_and_search.py  test_search_forward.py  test_seed_report.py  test_sync_flooding.py  test_sync_repair.py  test_tombstone.py  test_tracker_rejoin.py
tests/unit/: test_chunk_manager.py  test_chunking.py  test_cli_helpers.py  test_config.py  test_errors.py  test_full_sync.py  test_hashing.py  test_index.py  test_logging_config.py  test_messages.py  test_name_registry.py  test_persistence.py  test_playlist_store.py  test_protocol.py  (+4 more)
