[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "peerspot"
version = "0.1.0"
description = "Sistema P2P híbrido com trackers — EACH-USP DSID"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "httpx>=0.27",
    "ntplib>=0.4",
    "sqlalchemy>=2.0",
    "python-vlc>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "black>=24.0",
]

[project.scripts]
peerspot-tracker = "tracker.main:cli"
peerspot-peer = "peer.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["common*", "tracker*", "peer*"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100